fixed problem with writing file